Desarrollo primera preg.

--- a/Tarea1.ipynb
+++ b/Tarea1.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,25 @@
     "\n",
     "- Método de la Bisección. Debe escribir explícitamente cual es la función 'f' a utilizar y los intervalos $[a,b]$ a utilizar. <span style=\"color:blue; font-size: 2em\"> **10 puntos**</span> \n",
     "\n",
-    "_Answer_ \n",
+    "Tomando el primer método numérico para la ecuación de la secuencia, se reordenan los elementos para igualar la ecuación a cero.\n",
+    "\n",
+    "\\begin{equation*}\n",
+    " \\dfrac{x_1-x_0}{2}\\left(y_1\\cos{(x_1+y_1)}+y_0\\cos{(x_0+y_0)}\\right) -y_1 + y_0   =  0\n",
+    "\\end{equation*}\n",
+    "\n",
+    "Luego, reemplazando $x_0$, $x_1$ e $y_0$ ya conocidos:\n",
+    "\n",
+    "\\begin{equation*}\n",
+    " \\dfrac{x_1-x_0}{2}\\left(y_1\\cos{(x_1+y_1)}+y_0\\cos{(x_0+y_0)}\\right) -y_1 + y_0   =  0\n",
+    "\\end{equation*}\n",
+    "\n",
+    "\\begin{equation*}\n",
+    " \\dfrac{100}{2M}\\left(y_i\\cos{(\\frac{100}{M} + y_1)}+\\cos{(1)}\\right) -y_1 + 1   =  0\n",
+    "\\end{equation*}\n",
+    "\n",
+    "\\begin{equation*}\n",
+    " \\dfrac{100*i}{M}\\left(y_{i+1}\\cos{(\\frac{100 * (i+1)}{M} + y_{i+1})}+\\cos{(100 + \\frac{i}{M} + y_{i+1})}\\right) -y_1 + 1   =  0\n",
+    "\\end{equation*}\n",
     "\n",
     "- Iteración de Punto Fijo (Restricción: Aquí no se puede usar el método de Newton). Explique cual será su _initial guess_ y la función 'g' a utilizar. Se espera que sea convergente. <span style=\"color:blue; font-size: 2em\"> **10 puntos**</span> \n",
     "\n",
@@ -230,6 +248,113 @@
     "    ...\n",
     "    return y\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = lambda x: (100/(2*1)) * (x*np.cos(100/1 + x) + np.cos(1)) -x + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bisect(f, a, b, tol=1e-8):\n",
+    "    fa = f(a)\n",
+    "    fb = f(b)\n",
+    "    i = 0\n",
+    "    # Just checking if the sign is not negative => not root  necessarily \n",
+    "    if np.sign(f(a)*f(b)) >= 0:\n",
+    "        print('f(a)f(b)<0 not satisfied!')\n",
+    "        return None\n",
+    "  \n",
+    "    #Printing the evolution of the computation of the root\n",
+    "    print(' i |     a     |     c     |     b     |     fa    |     fc     |     fb     |   b-a')\n",
+    "    print('----------------------------------------------------------------------------------------')\n",
+    "    \n",
+    "    while(b-a)/2 > tol:\n",
+    "        c = (a+b)/2.\n",
+    "        fc = f(c)\n",
+    "        print('%2d | %.7f | %.7f | %.7f | %.7f | %.7f | %.7f | %.7f' %\n",
+    "              (i+1, a, c, b, fa, fc, fb, b-a))\n",
+    "        # Did we find the root?\n",
+    "        if fc == 0:\n",
+    "            print('f(c)==0')\n",
+    "            break\n",
+    "        elif np.sign(fa*fc) < 0:\n",
+    "            b = c\n",
+    "            fb = fc\n",
+    "        else:\n",
+    "            a = c\n",
+    "            fa = fc\n",
+    "        i += 1\n",
+    "        \n",
+    "    xc = (a+b)/2.\n",
+    "    return xc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " i |     a     |     c     |     b     |     fa    |     fc     |     fb     |   b-a\n",
+      "----------------------------------------------------------------------------------------\n",
+      " 1 | -10.0000000 | -2.5000000 | 5.0000000 | 262.0519234 | 154.7509890 | -37.2246470 | 15.0000000\n",
+      " 2 | -2.5000000 | 1.2500000 | 5.0000000 | 154.7509890 | 73.7927171 | -37.2246470 | 7.5000000\n",
+      " 3 | 1.2500000 | 3.1250000 | 5.0000000 | 73.7927171 | -108.5159168 | -37.2246470 | 3.7500000\n",
+      " 4 | 1.2500000 | 2.1875000 | 3.1250000 | 73.7927171 | 16.4614238 | -108.5159168 | 1.8750000\n",
+      " 5 | 2.1875000 | 2.6562500 | 3.1250000 | 16.4614238 | -44.5680750 | -108.5159168 | 0.9375000\n",
+      " 6 | 2.1875000 | 2.4218750 | 2.6562500 | 16.4614238 | -12.5118800 | -44.5680750 | 0.4687500\n",
+      " 7 | 2.1875000 | 2.3046875 | 2.4218750 | 16.4614238 | 2.4865062 | -12.5118800 | 0.2343750\n",
+      " 8 | 2.3046875 | 2.3632812 | 2.4218750 | 2.4865062 | -4.8993868 | -12.5118800 | 0.1171875\n",
+      " 9 | 2.3046875 | 2.3339844 | 2.3632812 | 2.4865062 | -1.1762080 | -4.8993868 | 0.0585938\n",
+      "10 | 2.3046875 | 2.3193359 | 2.3339844 | 2.4865062 | 0.6629389 | -1.1762080 | 0.0292969\n",
+      "11 | 2.3193359 | 2.3266602 | 2.3339844 | 0.6629389 | -0.2547157 | -1.1762080 | 0.0146484\n",
+      "12 | 2.3193359 | 2.3229980 | 2.3266602 | 0.6629389 | 0.2045949 | -0.2547157 | 0.0073242\n",
+      "13 | 2.3229980 | 2.3248291 | 2.3266602 | 0.2045949 | -0.0249400 | -0.2547157 | 0.0036621\n",
+      "14 | 2.3229980 | 2.3239136 | 2.3248291 | 0.2045949 | 0.0898576 | -0.0249400 | 0.0018311\n",
+      "15 | 2.3239136 | 2.3243713 | 2.3248291 | 0.0898576 | 0.0324663 | -0.0249400 | 0.0009155\n",
+      "16 | 2.3243713 | 2.3246002 | 2.3248291 | 0.0324663 | 0.0037650 | -0.0249400 | 0.0004578\n",
+      "17 | 2.3246002 | 2.3247147 | 2.3248291 | 0.0037650 | -0.0105870 | -0.0249400 | 0.0002289\n",
+      "18 | 2.3246002 | 2.3246574 | 2.3247147 | 0.0037650 | -0.0034109 | -0.0105870 | 0.0001144\n",
+      "19 | 2.3246002 | 2.3246288 | 2.3246574 | 0.0037650 | 0.0001771 | -0.0034109 | 0.0000572\n",
+      "20 | 2.3246288 | 2.3246431 | 2.3246574 | 0.0001771 | -0.0016169 | -0.0034109 | 0.0000286\n",
+      "21 | 2.3246288 | 2.3246360 | 2.3246431 | 0.0001771 | -0.0007199 | -0.0016169 | 0.0000143\n",
+      "22 | 2.3246288 | 2.3246324 | 2.3246360 | 0.0001771 | -0.0002714 | -0.0007199 | 0.0000072\n",
+      "23 | 2.3246288 | 2.3246306 | 2.3246324 | 0.0001771 | -0.0000472 | -0.0002714 | 0.0000036\n",
+      "24 | 2.3246288 | 2.3246297 | 2.3246306 | 0.0001771 | 0.0000650 | -0.0000472 | 0.0000018\n",
+      "25 | 2.3246297 | 2.3246302 | 2.3246306 | 0.0000650 | 0.0000089 | -0.0000472 | 0.0000009\n",
+      "26 | 2.3246302 | 2.3246304 | 2.3246306 | 0.0000089 | -0.0000191 | -0.0000472 | 0.0000004\n",
+      "27 | 2.3246302 | 2.3246303 | 2.3246304 | 0.0000089 | -0.0000051 | -0.0000191 | 0.0000002\n",
+      "28 | 2.3246302 | 2.3246302 | 2.3246303 | 0.0000089 | 0.0000019 | -0.0000051 | 0.0000001\n",
+      "29 | 2.3246302 | 2.3246303 | 2.3246303 | 0.0000019 | -0.0000016 | -0.0000051 | 0.0000001\n",
+      "30 | 2.3246302 | 2.3246302 | 2.3246303 | 0.0000019 | 0.0000001 | -0.0000016 | 0.0000000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2.3246302478946745"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bisect(f, -10, 5)"
    ]
   },
   {
@@ -450,7 +575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
