--- a/Tarea1-201330061-8.ipynb
+++ b/Tarea1-201330061-8.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -277,13 +277,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf964465ba0445f2a3295f01312f3586",
+       "model_id": "74d9889b20a140f28599f286decbbece",
        "version_major": 2,
        "version_minor": 0
       },
@@ -300,7 +300,7 @@
        "<function __main__.plot_for_initial_guess(M_intervals=10)>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        "1.0485017742527833"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,9 +483,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.0273268661478863"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "i = 0\n",
     "y_0 = 1\n",
@@ -528,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,14 +620,15 @@
     "def fpi_ode_solver(M_intervals=10,N_budget=1e4,tol=1e-8):\n",
     "    y = np.full(M_intervals+1,np.nan)\n",
     "    g = lambda x, y, i: (50/(M_intervals)) * (x*(np.cos(100*(i+1)/M_intervals + x)) + y * (np.cos(100 * i/M_intervals + y))) + y\n",
-    "    x0 = 1.2\n",
-    "    k = 15\n",
+    "    x0 = 0.5\n",
+    "    k = 1500\n",
     "    y_i = 1\n",
     "    \n",
     "    for i in range(M_intervals+1):\n",
     "        x = np.empty(k+1)\n",
     "        x[0] = x0\n",
     "        error_i = np.inf\n",
+    "        stop = -1\n",
     "        \n",
     "        for j in range(k):\n",
     "            x[j+1] = g(x[j], y_i, i)\n",
@@ -624,8 +636,15 @@
     "            error_iminus1 = error_i\n",
     "            error_i = abs(x[j+1]-x[j])\n",
     "            N_budget -= 1\n",
-    "        \n",
-    "        y_i = x[-1]\n",
+    "            \n",
+    "            if(error_i <= tol):\n",
+    "                stop = j\n",
+    "                break\n",
+    "                \n",
+    "        if(stop != -1):\n",
+    "            y_i = x[stop+1]\n",
+    "        else:\n",
+    "            y_i = x[-1]\n",
     "        \n",
     "        if(N_budget >= 0):\n",
     "            y[i] = y_i\n",
@@ -644,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +681,7 @@
     "    f = lambda x, y, i: (50/(M_intervals)) * (x*(np.cos(100*(i+1)/M_intervals + x)) + y * (np.cos(100 * i/M_intervals + y))) -x + y\n",
     "    fp = lambda x, y, i: -1 + 50*(-x*np.sin(x + (100*i + 100)/M_intervals) + np.cos(x + (100*i + 100)/M_intervals))/M_intervals\n",
     "    y_i = 1\n",
-    "    x0 = 0\n",
+    "    x0 = 0.5\n",
     "    m = 1\n",
     "\n",
     "    for i in range(M_intervals+1):\n",
@@ -710,9 +729,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c351581b9ada49c385a19fe7b72dde44",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=100, description='M_intervals', max=100000, min=100, step=100), IntSlide…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.plot_solutions_of_ODE(M_intervals=10, N_budget=10000.0, log_tol=-8, shift=0.1)>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def plot_solutions_of_ODE(M_intervals=10,N_budget=1e4,log_tol=-8,shift=0.1):\n",
     "    tol = 10**log_tol\n",
@@ -745,7 +789,7 @@
    "source": [
     "Para poder concluir lo aprendido con la tarea es importante destacar lo logrado con las estrategias e implementaciones. La visualización de los métodos en base a un mismo presupuesto permiten poder concluir sobre algunos aspectos:\n",
     "\n",
-    "- Existe una clara ventaja sobre los métodos, donde el Método de Newton resulta ser el más eficiente; seguido por la Iteración de Punto Fijo y luego el Método de Bisección. En la teoría no es posible predeterminar que método puede tener mejor rendimiento, Punto Fijo no garantiza que su eficiencia esté por sobre la Bisección; sin embargo, este problema comprueba que el tipo y complejidad puede ser relevante para decidir qué utilizar. En este caso, la dificultad que tiene Bisección es no tener los intervalos exactos para comenzar, teniendo así que realizar más iteraciones a mayor costo en comparación de Punto Fijo. Por otra parte, se esperaba que con Método de Newton se obtuvieran mejores resultados, ya que es un Punto Fijo mejorado. Por tanto, la elección de que método utilizar debe ser basado en la información que entrega el problema.\n",
+    "- Existe una clara ventaja sobre los métodos, donde a menor tolerancia el Método de Newton es más eficiente; a mayor, la Iteración de Punto Fijo computa más soluciones, pero en ambos casos el Método de Bisección es el que menos computa. La razón de esto es porque a mayor M_intervals, el error del Método de Newton sobrepasa rápidamente la tolerancia establecida; sin embargo, logra converger más rápido. En la teoría no es posible predeterminar que método puede tener mejor rendimiento, Punto Fijo no garantiza que su eficiencia esté por sobre la Bisección; sin embargo, este problema comprueba que el tipo y complejidad puede ser relevante para decidir qué utilizar. En este caso, la dificultad que tiene Bisección es no tener los intervalos exactos para comenzar, teniendo así que realizar más iteraciones a mayor costo en comparación de Punto Fijo. Por otra parte, se esperaba que con Método de Newton se obtuvieran mejores resultados, ya que es un Punto Fijo mejorado. Por tanto, la elección de que método utilizar debe ser basado en la información que entrega el problema.\n",
     "\n",
     "\n",
     "- La visualización de las funciones es muy útil al momento de plantear una estrategia. En casos donde se debe definir un _initial guess_ es necesario analizar el comportamiento de la función para encontrar un valor cercano que pueda evaluarse y así obtener tener una raiz de la ecuación. Al discretizar la función en este problema se agregaba una variable extra a la función; sin embargo, gracias a las librerias numpy y matplotlib se pudo ilustrar el comportamiento de este e incluso interactuar con la cantidad de intervalos, logrando así poder determinar un valor cercano con cual empezar.\n",
