--- a/Tarea1-201330061-8.ipynb
+++ b/Tarea1-201330061-8.ipynb
@@ -800,7 +800,7 @@
     "\n",
     "- Se debe tener especial cuidado con los errores y la tolerancia en cada algoritmo. Una mala implementación de estos puede hacer que los métodos no entreguen los resultados esperados o incluso no terminen de ejecutar. Del mismo modo hay que tener cuidado con la definición de las funciones; en Punto Fijo esto es muy importante, pues una mala definición puede hacer el que método tienda a divergir indefinidamente. Lo mismo ocurre con el _initial guess_, el cual puede provocar tener que hacer más iteraciones según el método.\n",
     "\n",
-    "Nota: Para obtener el _initial guess_ se pudo haber graficado la EDO con scypy y así haber encontrado un valor en donde la función convergiera, sin embargo, esto hubiera resolvido el problema inicial de la tarea en donde los Avengers podian obtener las soluciones sin usar algoritmos numéricos. A modo de conclusión se grafica la EDO con el código de este [notebook](http://sam-dolan.staff.shef.ac.uk/mas212/notebooks/ODE_Example.html) como referencia, cuyo resultado es similar a los obtenidos con algoritmos numéricos."
+    "Nota: Para obtener el _initial guess_ se pudo haber graficado la EDO con scypy y así haber encontrado un valor en donde la función convergiera, sin embargo, esto hubiera resolvido el problema inicial de la tarea en donde los Avengers podian obtener las soluciones sin usar algoritmos numéricos. A modo de conclusión se grafica la EDO, cuyo resultado es similar a los obtenidos con algoritmos numéricos."
    ]
   },
   {
