--- a/Tarea1-201330061-8.ipynb
+++ b/Tarea1-201330061-8.ipynb
@@ -283,7 +283,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a25dc832470490f8c51462925a443e0",
+       "model_id": "eceb86ee01e94dbcb0ce602bb4e9e80d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -453,12 +453,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Declaración de variables con Sympy\n",
     "x = sym.Symbol('x', real=True)\n",
     "i = sym.Symbol('i', real=True)\n",
     "y = sym.Symbol('y', real=True)\n",
     "M = sym.Symbol('M', real=True)\n",
     "\n",
+    "#Función general\n",
     "f = (50/(M)) * (x*(sym.cos(100*(i+1)/M + x)) + y * (sym.cos(100 * i/M + y))) -x + y\n",
+    "\n",
+    "#Derivada de la función general\n",
     "dfdx = f.diff(x)"
    ]
   },
@@ -498,9 +502,12 @@
     }
    ],
    "source": [
+    "#Definición de variables para la primera ecuación de la secuencia\n",
     "i = 0\n",
     "y_0 = 1\n",
     "M = 1000\n",
+    "\n",
+    "#Función general derivada f'\n",
     "fp = lambda y: -1 + 50*(-y*np.sin(y + (100*i + 100)/M) + np.cos(y + (100*i + 100)/M))/M\n",
     "fp(1.048501767218113)"
    ]
@@ -552,32 +559,46 @@
     "y - (double-array) The values of y(x_i) for all the values of x_i. The dimension of this vector is M+1, it must include the initial value. The vector should return NaN if it could not compute any of the values required.\n",
     "'''\n",
     "def bisect_ode_solver(M_intervals=10, N_budget=1e4, tol=1e-8):\n",
+    "    #Inicialización de variables y vectores\n",
     "    y = np.full(M_intervals+1, np.nan)\n",
     "    f = lambda x, y, i: (50/(M_intervals)) * (x*(np.cos(100*(i+1)/M_intervals + x)) + y * (np.cos(100 * i/M_intervals + y))) -x + y\n",
     "    y_i = 1\n",
     "    y[0] = y_i\n",
     "    x = np.arange(0, 100)\n",
     "    \n",
+    "    #Iteración para resolver todas las ecuaciones de la secuencia\n",
     "    for i in range(M_intervals):\n",
+    "        \n",
+    "        #Busqueda del primer intervalo que satisfaga la condición para poder aplicar bisección\n",
     "        val = np.argmax(f(x, y_i, i) * f(-x, y_i, i) < 0)\n",
     "        N_budget -= 229\n",
     "        a = -val\n",
     "        b = val\n",
+    "        \n",
+    "        #Evaluación de la función con los valores obtenidos en el intervalo\n",
     "        fa = f(a, y_i, i)\n",
     "        fb = f(b, y_i, i)\n",
     "        j = 0\n",
     "        \n",
+    "        #Busqueda en sub-intervalos hasta que la distancia entre los intervalos sea menor que la tolerancia indicada\n",
     "        while(b-a)/2 > tol:\n",
+    "            \n",
+    "            #Punto medio del intervalo y evaluación en la función general\n",
     "            c = (a+b)/2.\n",
     "            fc = f(c, y_i, i)\n",
     "            N_budget -= 118\n",
     "            \n",
+    "            #Si el punto medio evaluado es igual a cero, se encontró una raíz\n",
     "            if fc == 0:\n",
     "                break\n",
+    "                \n",
+    "            #Si el lado izquierdo del intervalo y el nuevo valor no cumple la condición general, se prueba con el otro intervalo\n",
     "            elif np.sign(fa*fc) < 0:\n",
     "                N_budget -= 1\n",
     "                b = c\n",
     "                fb = fc\n",
+    "                \n",
+    "            #En otro caso se sigue buscando\n",
     "            else:\n",
     "                a = c\n",
     "                fa = fc\n",
@@ -585,9 +606,11 @@
     "            j += 1\n",
     "            N_budget -= 1\n",
     "        \n",
+    "        #Raíz encontrada\n",
     "        y_i = (a+b)/2.\n",
     "        N_budget -= 2\n",
     "        \n",
+    "        #Si queda presupuesto, se guarda en el arreglo\n",
     "        if(N_budget >= 0):\n",
     "            y[i+1] = y_i     \n",
     "        else:\n",
@@ -618,6 +641,7 @@
     "y - (double-array) The values of y(x_i) for all the values of x_i. The dimension of this vector is M+1, it must include the initial value. The vector should return NaN if it could not compute any of the values required.\n",
     "'''\n",
     "def fpi_ode_solver(M_intervals=10,N_budget=1e4,tol=1e-8):\n",
+    "    #Inicialización de variables y vectores\n",
     "    y = np.full(M_intervals+1,np.nan)\n",
     "    g = lambda x, y, i: (50/(M_intervals)) * (x*(np.cos(100*(i+1)/M_intervals + x)) + y * (np.cos(100 * i/M_intervals + y))) + y\n",
     "    x0 = 0.5\n",
@@ -625,28 +649,44 @@
     "    y_i = 1\n",
     "    y[0] = y_i\n",
     "    \n",
+    "    #Iteración para resolver todas las ecuaciones de la secuencia\n",
     "    for i in range(M_intervals):\n",
+    "        #Se inicia un nuevo vector para guardar las iteraciones por fpi\n",
     "        x = np.empty(k+1)\n",
+    "        #Inicialización de variables: Initial Guess, error y criterio de detención\n",
     "        x[0] = x0\n",
     "        error_i = np.inf\n",
     "        stop = -1\n",
     "        \n",
+    "        #Se itera en base a una cantidad predefinida, idealmente la función debiese converger antes.\n",
+    "        #Una vez que el error entre el nuevo y el anterior valor de la iteración sea mayor a la tolerancia predefinida\n",
+    "        #se deja de iterar\n",
     "        for j in range(k):\n",
+    "            \n",
+    "            #Se evalua la función derivada con el valor según la iteración. El primer valor a evaluar es el Initial Guess\n",
     "            x[j+1] = g(x[j], y_i, i)\n",
     "            N_budget -= 113\n",
+    "            \n",
+    "            #Error entre el resultado actual y anterior de la iteración\n",
     "            error_iminus1 = error_i\n",
     "            error_i = abs(x[j+1]-x[j])\n",
     "            N_budget -= 1\n",
     "            \n",
+    "            #Si el error obtenido hasta este punto supera la tolerancia, se deja de iterar para la ecuación actual\n",
+    "            #Se guarda la posición del arreglo donde quedó el último valor\n",
     "            if(error_i <= tol):\n",
     "                stop = j\n",
     "                break\n",
-    "                \n",
+    "        \n",
+    "        #Si está definido el criterio de termino, la raíz no está en el último elemento del vector\n",
     "        if(stop != -1):\n",
     "            y_i = x[stop+1]\n",
+    "            \n",
+    "        #En caso contrario, la raíz está al final del vector\n",
     "        else:\n",
     "            y_i = x[-1]\n",
     "        \n",
+    "        #Si hay presupuesto, se guarda la raíz en el vector principal\n",
     "        if(N_budget >= 0):\n",
     "            y[i+1] = y_i\n",
     "        else:\n",
@@ -677,6 +717,7 @@
     "y - (double-array) The values of y(x_i) for all the values of x_i. The dimension of this vector is M+1, it must include the initial value. The vector should return NaN if it could not compute any of the values required.\n",
     "'''\n",
     "def newton_ode_solver(M_intervals=10,N_budget=1e4,tol=1e-8):\n",
+    "    #Inicialización de variables y vectores (Funciones, Initial Guess, Vectores y multiplicidad)\n",
     "    y = np.full(M_intervals+1,np.nan)\n",
     "    f = lambda x, y, i: (50/(M_intervals)) * (x*(np.cos(100*(i+1)/M_intervals + x)) + y * (np.cos(100 * i/M_intervals + y))) -x + y\n",
     "    fp = lambda x, y, i: -1 + 50*(-x*np.sin(x + (100*i + 100)/M_intervals) + np.cos(x + (100*i + 100)/M_intervals))/M_intervals\n",
@@ -685,20 +726,30 @@
     "    x0 = 0.5\n",
     "    m = 1\n",
     "\n",
+    "    #Iteración para resolver todas las ecuaciones de la secuencia\n",
     "    for i in range(M_intervals):\n",
     "        N_budget -= 1\n",
+    "        #Se asume un error híbrido para comparar con la tolerancia predefinida\n",
     "        hybrid_error = 100\n",
     "        error_i = np.inf\n",
+    "        #Iterador de convergencia\n",
     "        j = 1\n",
     "        \n",
+    "        #Ciclo para encontrar la raíz. El criterio de detención es que la tolerancia supere el error híbrido definido anteriormente\n",
+    "        #Si el error híbrido se hace muy grande, el método converge y se detiene\n",
     "        while (hybrid_error > tol and hybrid_error < 1e12 and j < 1e4):\n",
+    "            \n",
+    "            #Se evalua la función de Newton según la iteración actual y se asigna la raíz encontrada \n",
     "            x1 = x0-m*f(x0, y_i, i)/fp(x0, y_i, i)\n",
     "            N_budget -= 232\n",
+    "            \n",
+    "            #Si se encontró una solución que sea la raíz de la función general, se detiene el loop\n",
     "            if f(x1, y_i, i) == 0.0:\n",
     "                N_budget -= 114\n",
     "                hybrid_error = 0.0\n",
     "                break\n",
     "            \n",
+    "            #Actualización del error híbrido y el iterador de convergencia\n",
     "            hybrid_error = abs(x1-x0)/np.max([abs(x1),1e-12])\n",
     "            error_iminus1 = error_i\n",
     "            error_i = abs(x1-x0)\n",
@@ -706,8 +757,10 @@
     "            x0 = x1\n",
     "            N_budget -= 5\n",
     "            \n",
+    "        #Si el error híbrido es menor a la tolerancia definida, el Método converge y se puede guardar la raíz\n",
     "        if hybrid_error < tol:\n",
     "            y_i = x1\n",
+    "            #Si hay presupuesto hasta este punto, se guarda la raíz en el vector principal\n",
     "            if(N_budget >= 0):\n",
     "                y[i+1] = y_i\n",
     "            else:\n",
@@ -736,7 +789,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1dffd07ce8df446f848e988087b5d879",
+       "model_id": "5ca22e0092624baf80534bed6f875c3d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -825,17 +878,17 @@
    "source": [
     "from scipy.integrate import odeint\n",
     "\n",
-    "# Define a function which calculates the derivative\n",
+    "# Se define la función a calcular la derivada\n",
     "def dy_dx(y, x):\n",
     "    return y*np.cos(x + y)\n",
     "\n",
     "xs = np.linspace(0,100,100)\n",
-    "y0 = 1.0  # the initial condition\n",
+    "y0 = 1.0  # Condición inicial\n",
     "ys = odeint(dy_dx, y0, xs)\n",
     "ys = np.array(ys).flatten()\n",
     "\n",
-    "# Plot the numerical solution\n",
-    "plt.rcParams.update({'font.size': 14})  # increase the font size\n",
+    "# Gráfica de la solución númerica\n",
+    "plt.rcParams.update({'font.size': 14})\n",
     "plt.xlabel(\"x\")\n",
     "plt.ylabel(\"y\")\n",
     "plt.plot(xs, ys);"
